# template_cpp_vk_bot

./: CMakeLists.txt
bot/: CMakeLists.txt
bot/include/: long_poller.hpp  message_new_handler.hpp
bot/include/commands/: base.hpp  hello_world.hpp
bot/src/: long_poller.cpp  main.cpp  message_new.cpp
bot/src/commands/: hello_world.cpp
